[metadata]
name = tinytree
author = Jianing Yang
author-email = jianingy.yang@gmail.com
summary = A tree path indexed key-value store based on L-Tree of PostgreSQL
license = Apache-2
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    tinytree
data_files =

[entry_points]
console_scripts =
    tinytree-db-manage = tinytree.models.migration.cli:main
